# Chat.hs

./: .gitignore  Husky.cabal  LICENSE  README.md  stack.yaml
.stack-work/install/x86_64-osx/nightly-2015-11-22/7.10.2/flag-cache/: Husky-0.1.0.0-cf145d5bd00ed9a49249e0e781b1078e
.stack-work/install/x86_64-osx/nightly-2015-11-22/7.10.2/lib/x86_64-osx-ghc-7.10.2/Husky-0.1.0.0-CuEISovbcEc4m3zY10jY7j/: libHSHusky-0.1.0.0-CuEISovbcEc4m3zY10jY7j-ghc7.10.2.dylib
.stack-work/install/x86_64-osx/nightly-2015-11-22/7.10.2/pkgdb/: Husky-0.1.0.0-cf145d5bd00ed9a49249e0e781b1078e.conf  package.cache
app/client/: Main.hs  Utils.hs
app/server/: Main.hs
src/: Lib.hs
