name:                Husky
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/isae/Husky#readme
license:             BSD3
license-file:        LICENSE
author:              Ilya Isaev
maintainer:          isaev@rain.ifmo.ru
copyright:           2016 Ilya Isaev
category:            Desktop
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable Husky-server
  hs-source-dirs:      app/server
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, event, network, bytestring, unix, scotty 
  default-language:    Haskell2010

executable Husky-client
  hs-source-dirs:      app/client
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Husky
  default-language:    Haskell2010


test-suite Husky-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Husky
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/isae/Husky
